# DRIFT

./: .gitignore  CHANGELOG.md  DRIFT_RESEARCH_RUNBOOK.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS_SUMMARY.md  LEXICON.md  LICENSE  NEXT_STAGE_SUMMARY.md  PROJECT_COMPLETE.md  README.md  SYNTHESIS.md  claude.md  consciousness_responsibly.md  demo.py  demo_updated.py  integrated_consciousness.py  integrated_consciousness_async.py  integrated_consciousness_v2.py  nurture_integration.md  pyproject.toml  requirements.txt  run_combined_demo.sh  test_async_nurture.py  test_next_stage.py  test_optimizer_config.py  validation_tests.py
analysis/: dashboard.py
config/: drift_config.yaml
core/: config.py  drift_logger.py  emotional_tagger_v2.py  exceptions.py
docs/: critique_and_recommendations.md  final_recommendations_report.md  implementation_guide.md
docs/evidence_base/: 00_EVIDENCE_SYNTHESIS.md
docs/evidence_base/01_Core_Hypothesis/: Default_Mode_Network.md  Global_Workspace_Theory.md
docs/evidence_base/02_Architecture_Components/: Active_Inference_PyMDP.md  Memory_Consolidation_SWR.md
docs/evidence_base/04_Inferred_Decisions_Log/: Inferences_and_Assumptions.md
docs/evidence_base/99_Archived_Original_Research/: README.md
docs/evidence_base/99_Archived_Original_Research/cognitive_architecture_research/: DEPLOYMENT_MANIFEST.md  README.md
docs/evidence_base/99_Archived_Original_Research/cognitive_architecture_research/01_deliverables/: Complete_Research_Synthesis.md  MAIN_Implementation_Guide_Complete.md
docs/evidence_base/99_Archived_Original_Research/cognitive_architecture_research/02_implementation_guides/: Working_Implementations_Survey.md
docs/evidence_base/99_Archived_Original_Research/cognitive_architecture_research/05_foundational_work/: Initial_Framework_Document.md  Initial_Structural_Analysis.md
docs/evidence_base/99_Archived_Original_Research/cognitive_architecture_research_2/: DEPLOYMENT_GUIDE.md  README.md
docs/evidence_base/99_Archived_Original_Research/cognitive_architecture_research_2/02_core_research/: active_inference_predictive_processing.md  consciousness_global_workspace_theory.md  neurosymbolic_ai_darpa_programs.md
docs/evidence_base/99_Archived_Original_Research/cognitive_architecture_research_2/03_implementation_details/: github_repositories_code_implementations.md  memory_forgetting_mechanisms.md  (+1 more)
experiments/: ablation_study.py  identity_validator.py  optimizer.py  profiler.py
(+2 files in other folders)
